Fixed main nav z-index above sidebar

--- a/src/app/pages/web/web.component.css
+++ b/src/app/pages/web/web.component.css
@@ -122,7 +122,7 @@
         top:0;
         bottom: 0;
         height:100vh;
-        Z-index:300; /* to show above main nav */
+        Z-index:90; /* to show above main nav */
         /*Hides it till user needs it*/
         display: block;
     }
@@ -137,7 +137,7 @@
         height:100vh;
         width: 100vw;
         display: block;
-        z-index:290;
+        z-index:89;
         backdrop-filter: blur(4px);
         /*Hides it till user needs it*/
         display: block;
